--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,23 +29,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/editText5"
-        android:layout_alignLeft="@+id/btnsend"
-        android:layout_alignStart="@+id/btnsend"
-        android:layout_marginBottom="52dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginStart="22dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="90dp"
         android:text="Subscribe" />
 
     <Button
         android:id="@+id/btnsend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3"
-        android:layout_below="@+id/editText3"
-        android:layout_marginLeft="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="19dp"
+        android:layout_above="@+id/btnsubscribe"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="68dp"
         android:text="Enviar_Mensagem" />
 
     <EditText
@@ -56,6 +50,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:ems="10"
+        android:hint="           Inserir Código"
         android:inputType="number" />
 
     <EditText
@@ -73,11 +68,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/editText2"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_marginBottom="24dp"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Topico da Mensagem"
         android:inputType="textMultiLine" />
+
+    <EditText
+        android:id="@+id/editopico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText3"
+        android:layout_alignStart="@+id/editText3"
+        android:layout_below="@+id/editText3"
+        android:layout_marginTop="36dp"
+        android:ems="10"
+        android:hint="   Tópico da Mensagem"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText5"
+        android:layout_alignLeft="@+id/btnsend"
+        android:layout_alignStart="@+id/btnsend"
+        android:text="Mensagem Recebida" />
 
 </RelativeLayout>
